v2.0.6-Alpha
- Event editor now saves attending like on the non-trusted tab to avoid setting the user as not attending by default.
- Comment is preserved when saving on event editor.

v2.0.4-Alpha
- Fix: Signups now keep their original time when modifying the attendee
- New: Added a chat message when a cooldown elapses (e.g. Mooncloth)