@@ -498,7 +498,7 @@ GroupCalendar_cCooldownItemInfo =
 
 function GroupCalendar_CheckItemCooldowns()	
 	-- Remove the existing saved info	
-	EventDatabase_RemoveSavedInstanceEvents(gGroupCalendar_UserDatabase, vCurrentServerDate, vCurrentServerTime);
+	EventDatabase_RemoveSavedInstanceEvents();
 
 	for vBagIndex = 0, NUM_BAG_SLOTS do
 		local	vNumBagSlots = GetContainerNumSlots(vBagIndex);
@@ -901,7 +901,7 @@ function GroupCalendar_Update(self, pElapsed)
 		gGroupCalendar_ExpiredEventsTime = 0;
 		
 		-- Remove the existing saved info	
-		EventDatabase_RemoveSavedInstanceEvents(gGroupCalendar_UserDatabase);
+		EventDatabase_RemoveSavedInstanceEvents();
 
 	end
 
